--- a/src/app/to-do/to-do.component.html
+++ b/src/app/to-do/to-do.component.html
@@ -20,13 +20,7 @@
       To do name
     </th>
     <th>
-      Status
-    </th>
-    <th>
-      Edit
-    </th>
-    <th>
-      Remove
+      Action
     </th>
   </thead>
   <tr>
@@ -40,17 +34,14 @@
       Make Midterm
     </td>
     <td>
-     In Progress
-    </td>
-    <td>
-     Update
-    </td>
-    <td>
-      Remove
+      Save
     </td>
   </tr>
 </table>
 </main>
+
+
+
 <div *ngIf = "showModal" id="modal">
   <form action="">
     <label for="Owner">Owner</label>
