--- a/src/app/to-do/to-do.component.html
+++ b/src/app/to-do/to-do.component.html
@@ -74,8 +74,8 @@ id="modal"
       id="name" 
       class="bg-slate-100 h-10 p-8 flex items-center w-11/12 mx-auto my-2 rounded-lg text-2xl focus:outline-none" 
       value="{{todo.task}}"/>
-     <button>
-      
+     <button (click) = "pushtoDatabase">
+      Push to databse
      </button>
   </div>
 } @empty {
