--- a/src/app/to-do/to-do.component.html
+++ b/src/app/to-do/to-do.component.html
@@ -1,3 +1,4 @@
+<!-- selecting owner -->
 <div *ngIf = "hideOnselectOwner" class="selectowner">
 <div class="flex flex-col gap-4">
 <label for="owners" class="text-3xl font-medium text-gray-900">Select an owner</label>
@@ -29,9 +30,9 @@ class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:
   </div>
 </div>
 </div>
-
+<!-- dashboard like -->
 <div id="container">
-
+<!-- sidebar -->
 <div class="sidebar" *ngIf = "showOnselectOwner">
   <div class="top">
     <h1 class="" *ngIf="ownername">
@@ -103,12 +104,6 @@ class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:
     @for (todo of ownerItemList; track todo.id) {
       <div id="lis-content" class="task">
         <h1>Task</h1>
-        <!-- <label for="name" class=''>Owner id</label>
-        <input 
-        name="owner" 
-        type="text" 
-        id="name" 
-        value="{{todo.owner}}"/> -->
         <label for="name" class=''>Task</label>
         <input 
         name="task" 
