services, account, list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,17 @@
   <account></account>
   <todo></todo>
   </router-outlet> -->
-  <h1>Angular Router App</h1>
+  <!-- <h1>Angular Router App</h1>
   <nav>
     <ul>
       <li><a routerLink="/todo"  ariaCurrentWhenActive="page">First Component</a></li>
       <li><a routerLink="/account" routerLinkActive="active" ariaCurrentWhenActive="page">Second Component</a></li>
     </ul>
   </nav>
-  <!-- The routed views render in the <router-outlet>-->
+  The routed views render in the <router-outlet>
   <router-outlet></router-outlet>
-  
+   -->
+
+   <account></account>
+   <router-outlet></router-outlet>
   
