--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -3,14 +3,14 @@
     <div 
     id="ownerForm"
     [formGroup]="account" >
-      <form >
+      <form (ngSubmit)="NewAccount()" >
         <h1>Fill up Form</h1>
         <label for="username" class="formlabel">Username</label>
-        <input type="text" id="username" name="username"  formControlName="username" placeholder="Enter username" autocomplete="off">
+        <input type="text" id="username" name="username"  formControlName="username" placeholder="Enter username" autocomplete="off" required>
         <label for="password" class="formlabel">Password</label>
-        <input type="password" id="password" name="password"  formControlName="password" placeholder="Enter password" autocomplete="off">
+        <input type="password" id="password" name="password"  formControlName="password" placeholder="Enter password" autocomplete="off" required>
         <div class="btn">
-          <button (click) = "NewAccount()">Submit</button>
+          <button type="submit">Submit</button>
         </div>
       </form>
     </div>
